fix dm align

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1683,6 +1683,11 @@ hr {
   margin: 0;
 }
 
+#message-list .msg {
+  display: flex;
+  flex-direction: column;
+}
+
 .message-form button,
 .message-form button:hover,
 .message-form button:active,
